ffi/poc/cpp/corpus/nounk/include/ak_abi.h

/* ---- section 4: common vocabulary (plan.FIXED) --------------------------------- */
typedef struct ak_enc_ctx ak_enc_ctx;
typedef struct ak_dec_ctx ak_dec_ctx;
/* ABI v1 section 6: a host-driven loop over one repeated/packed/map field. */
typedef int32_t (*ak_loop_f)(ak_enc_ctx *ctx, const void *obj, int64_t token);
/* ABI v1 section 4, encode: a blob as DATA in the group. `len` counts SOURCE code units; `tc == NULL` means the field is ABSENT. */
struct ak_str {
  const void *data;
  size_t len;
  ak_transcode_fn tc;
};
typedef struct ak_str ak_str;
/* Encode group for `Timestamp`. */
struct ak_efix_Timestamp {
  int64_t seconds;
  int32_t nanos;
  uint32_t presence;
};
/* Encode group for `Duration`. */
struct ak_efix_Duration {
  int64_t seconds;
  int32_t nanos;
  uint32_t presence;
};
/* Encode group for `ResultRaw`. */
struct ak_efix_ResultRaw {
  struct ak_str session_id;
  struct ak_str name;
  struct ak_str owner_task_id;
  int32_t status;
  struct ak_efix_Timestamp created_at;
  struct ak_efix_Timestamp completed_at;
  struct ak_str result_id;
  int64_t size;
  struct ak_str created_by;
  struct ak_str opaque_id;
  uint8_t manual_deletion;
  uint32_t presence;
};
/* Encode group for `TaskOptions`. */
struct ak_efix_TaskOptions {
  struct ak_efix_Duration max_duration;
  int32_t max_retries;
  int32_t priority;
  struct ak_str partition_id;
  struct ak_str application_name;
  struct ak_str application_version;
  struct ak_str application_namespace;
  struct ak_str application_service;
  struct ak_str engine_type;
  uint32_t presence;
};
/* Encode group for `TaskOutput`. */
struct ak_efix_TaskOutput {
  uint8_t success;
  struct ak_str error;
  uint32_t presence;
};
/* Encode group for `TaskDetailed`. */
struct ak_efix_TaskDetailed {
  struct ak_str id;
  struct ak_str session_id;
  struct ak_str owner_pod_id;
  int32_t status;
  struct ak_str status_message;
  struct ak_efix_TaskOptions options;
  struct ak_efix_Timestamp created_at;
  struct ak_efix_Timestamp submitted_at;
  struct ak_efix_Timestamp started_at;
  struct ak_efix_Timestamp ended_at;
  struct ak_efix_Timestamp pod_ttl;
  struct ak_efix_TaskOutput output;
  struct ak_str pod_hostname;
  struct ak_efix_Timestamp received_at;
  struct ak_efix_Timestamp acquired_at;
  struct ak_efix_Duration creation_to_end_duration;
  struct ak_efix_Duration processing_to_end_duration;
  struct ak_str initial_task_id;
  struct ak_efix_Duration received_to_end_duration;
  struct ak_efix_Timestamp processed_at;
  struct ak_efix_Timestamp fetched_at;
  struct ak_str payload_id;
  struct ak_str created_by;
  uint32_t presence;
};
/* Encode group for `Empty`. */
struct ak_efix_Empty {
  uint32_t presence;
};
/* Encode group for `Probe`. */
struct ak_efix_Probe {
  struct ak_str id;
  int32_t opt_count;
  struct ak_str opt_label;
  uint8_t opt_flag;
  uint32_t body_case;
  int64_t body_as_int;
  struct ak_str body_as_text;
  struct ak_str body_as_blob;
  struct ak_efix_Timestamp body_as_stamp;
  struct ak_efix_Empty body_as_nothing;
  uint32_t presence;
};
/* Encode group for `MetricsBatch`. */
struct ak_efix_MetricsBatch {
  struct ak_str id;
  uint32_t presence;
};
/* Decode group for `MetricsBatch`. */
struct ak_dfix_MetricsBatch {
  struct ak_span id;
  uint32_t presence;
};
/* Encode group for `Pair`. */
struct ak_efix_Pair {
  struct ak_str key;
  int32_t value;
  uint32_t presence;
};
/* Decode group for `Pair`. */
struct ak_dfix_Pair {
  struct ak_span key;
  int32_t value;
  uint32_t presence;
};
/* Encode group for `ListMetricsResponse`. */
struct ak_efix_ListMetricsResponse {
  uint32_t presence;
};
/* Decode group for `ListMetricsResponse`. */
struct ak_dfix_ListMetricsResponse {
  uint32_t presence;
};
/* Decode group for `UploadResultDataMessage`. */
struct ak_dfix_UploadResultDataMessage {
  struct ak_dfix_UploadResultData upload;
  uint32_t presence;
};
/* Encode group for `DualResponse`. */
struct ak_efix_DualResponse {
  uint32_t presence;
};
/* Decode group for `DualResponse`. */
struct ak_dfix_DualResponse {
  uint32_t presence;
};
/* Encode vtable for `MetricsBatch`. */
struct ak_evt_MetricsBatch {
  ak_loop_f loop_ticks;
  ak_loop_f loop_values;
  ak_loop_f loop_codes;
  ak_loop_f loop_flags;
  ak_loop_f loop_statuses;
};
/* Encode vtable for `ListMetricsResponse`. */
struct ak_evt_ListMetricsResponse {
  ak_loop_f loop_batches;
  const struct ak_evt_MetricsBatch *elem_batches;
};
/* Decode vtable for `ListMetricsResponse` (the push family, ABI v1 section 7.1). */
struct ak_dvt_ListMetricsResponse {
  void (*apply)(ak_dec_ctx *, void *, const struct ak_dfix_ListMetricsResponse *);
  int64_t (*new_batches)(ak_dec_ctx *, void *);
  void (*apply_batches)(ak_dec_ctx *, void *, int64_t, const struct ak_dfix_MetricsBatch *);
  void (*add_batches_ticks)(ak_dec_ctx *, void *, int64_t, const int64_t *, int32_t);
  void (*add_batches_values)(ak_dec_ctx *, void *, int64_t, const double *, int32_t);
  void (*add_batches_codes)(ak_dec_ctx *, void *, int64_t, const int32_t *, int32_t);
  void (*add_batches_flags)(ak_dec_ctx *, void *, int64_t, const uint8_t *, int32_t);
  void (*add_batches_statuses)(ak_dec_ctx *, void *, int64_t, const int32_t *, int32_t);
};
/* Decode vtable for `UploadResultDataMessage` (the push family, ABI v1 section 7.1). */
struct ak_dvt_UploadResultDataMessage {
  void (*apply)(ak_dec_ctx *, void *, const struct ak_dfix_UploadResultDataMessage *);
};
/* Encode vtable for `DualResponse`. */
struct ak_evt_DualResponse {
  ak_loop_f loop_left;
  ak_loop_f loop_right;
};
/* Decode vtable for `DualResponse` (the push family, ABI v1 section 7.1). */
struct ak_dvt_DualResponse {
  void (*apply)(ak_dec_ctx *, void *, const struct ak_dfix_DualResponse *);
  void (*add_left)(ak_dec_ctx *, void *, int64_t, const struct ak_dfix_Pair *, int32_t);
  void (*add_right)(ak_dec_ctx *, void *, int64_t, const struct ak_dfix_Pair *, int32_t);
};
intptr_t ak_encode_ListMetricsResponse(const void *obj, ak_enc_ctx *ctx, const struct ak_evt_ListMetricsResponse *vt, const struct ak_efix_ListMetricsResponse *fix);
int32_t ak_decode_ListMetricsResponse(ak_dec_ctx *ctx, void *obj, const uint8_t *buf, size_t len, const struct ak_dvt_ListMetricsResponse *vt);
int32_t ak_parse_ListMetricsResponse(ak_dec_ctx *ctx, const uint8_t *buf, size_t len);
int32_t ak_decode_UploadResultDataMessage(ak_dec_ctx *ctx, void *obj, const uint8_t *buf, size_t len, const struct ak_dvt_UploadResultDataMessage *vt);
int32_t ak_parse_UploadResultDataMessage(ak_dec_ctx *ctx, const uint8_t *buf, size_t len);
intptr_t ak_encode_DualResponse(const void *obj, ak_enc_ctx *ctx, const struct ak_evt_DualResponse *vt, const struct ak_efix_DualResponse *fix);
int32_t ak_decode_DualResponse(ak_dec_ctx *ctx, void *obj, const uint8_t *buf, size_t len, const struct ak_dvt_DualResponse *vt);
int32_t ak_parse_DualResponse(ak_dec_ctx *ctx, const uint8_t *buf, size_t len);
int32_t ak_elemu_MetricsBatch(ak_enc_ctx *ctx, const struct ak_efix_MetricsBatch *elems, int32_t n, int64_t tok0);
int32_t ak_elem_Pair(ak_enc_ctx *ctx, const struct ak_efix_Pair *elems, int32_t n);
int32_t ak_elem_Probe(ak_enc_ctx *ctx, const struct ak_efix_Probe *elems, int32_t n);
int32_t ak_elem_ResultRaw(ak_enc_ctx *ctx, const struct ak_efix_ResultRaw *elems, int32_t n);
int32_t ak_elemu_TaskDetailed(ak_enc_ctx *ctx, const struct ak_efix_TaskDetailed *elems, int32_t n, int64_t tok0);