ffi/poc/csharp/src/Harness/GeneratedNounk/Abi.cs

    internal static int ak_decode_UploadResultDataMessage(IntPtr ctx, void* obj, byte* buf, nuint len, ak_dvt_UploadResultDataMessage* vt) { System.Threading.Interlocked.Increment(ref N_ak_decode_UploadResultDataMessage); return ak_decode_UploadResultDataMessage__raw(ctx, obj, buf, len, vt); }
#elif NET7_0_OR_GREATER
    [LibraryImport(Lib)]
    [UnmanagedCallConv(CallConvs = new[] { typeof(CallConvCdecl) })]
    internal static partial int ak_decode_UploadResultDataMessage(IntPtr ctx, void* obj, byte* buf, nuint len, ak_dvt_UploadResultDataMessage* vt);
#else
    [DllImport(Lib, CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
    internal static extern int ak_decode_UploadResultDataMessage(IntPtr ctx, void* obj, byte* buf, nuint len, ak_dvt_UploadResultDataMessage* vt);
#endif
#if AK_HOST_COUNT
    [DllImport(Lib, EntryPoint = "ak_parse_UploadResultDataMessage", CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
    private static extern int ak_parse_UploadResultDataMessage__raw(IntPtr ctx, byte* buf, nuint len);
    internal static long N_ak_parse_UploadResultDataMessage;
    internal static int ak_parse_UploadResultDataMessage(IntPtr ctx, byte* buf, nuint len) { System.Threading.Interlocked.Increment(ref N_ak_parse_UploadResultDataMessage); return ak_parse_UploadResultDataMessage__raw(ctx, buf, len); }
#elif NET7_0_OR_GREATER
    [LibraryImport(Lib)]
    [UnmanagedCallConv(CallConvs = new[] { typeof(CallConvCdecl) })]
    internal static partial int ak_parse_UploadResultDataMessage(IntPtr ctx, byte* buf, nuint len);
#else
    [DllImport(Lib, CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
    internal static extern int ak_parse_UploadResultDataMessage(IntPtr ctx, byte* buf, nuint len);
#endif
#if AK_HOST_COUNT
    [DllImport(Lib, EntryPoint = "ak_encode_ListMetricsResponse", CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
    private static extern nint ak_encode_ListMetricsResponse__raw(void* obj, IntPtr ctx, ak_evt_ListMetricsResponse* vt, ak_efix_ListMetricsResponse* fix);
    internal static long N_ak_encode_ListMetricsResponse;
    internal static nint ak_encode_ListMetricsResponse(void* obj, IntPtr ctx, ak_evt_ListMetricsResponse* vt, ak_efix_ListMetricsResponse* fix) { System.Threading.Interlocked.Increment(ref N_ak_encode_ListMetricsResponse); return ak_encode_ListMetricsResponse__raw(obj, ctx, vt, fix); }
#elif NET7_0_OR_GREATER
    [LibraryImport(Lib)]
    [UnmanagedCallConv(CallConvs = new[] { typeof(CallConvCdecl) })]
    internal static partial nint ak_encode_ListMetricsResponse(void* obj, IntPtr ctx, ak_evt_ListMetricsResponse* vt, ak_efix_ListMetricsResponse* fix);
#else
    [DllImport(Lib, CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
    internal static extern nint ak_encode_ListMetricsResponse(void* obj, IntPtr ctx, ak_evt_ListMetricsResponse* vt, ak_efix_ListMetricsResponse* fix);
#endif
#if AK_HOST_COUNT
    [DllImport(Lib, EntryPoint = "ak_decode_ListMetricsResponse", CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
    private static extern int ak_decode_ListMetricsResponse__raw(IntPtr ctx, void* obj, byte* buf, nuint len, ak_dvt_ListMetricsResponse* vt);
    internal static long N_ak_decode_ListMetricsResponse;
    internal static int ak_decode_ListMetricsResponse(IntPtr ctx, void* obj, byte* buf, nuint len, ak_dvt_ListMetricsResponse* vt) { System.Threading.Interlocked.Increment(ref N_ak_decode_ListMetricsResponse); return ak_decode_ListMetricsResponse__raw(ctx, obj, buf, len, vt); }
#elif NET7_0_OR_GREATER
    [LibraryImport(Lib)]
    [UnmanagedCallConv(CallConvs = new[] { typeof(CallConvCdecl) })]
    internal static partial int ak_decode_ListMetricsResponse(IntPtr ctx, void* obj, byte* buf, nuint len, ak_dvt_ListMetricsResponse* vt);
#else
    [DllImport(Lib, CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
    internal static extern int ak_decode_ListMetricsResponse(IntPtr ctx, void* obj, byte* buf, nuint len, ak_dvt_ListMetricsResponse* vt);
#endif
#if AK_HOST_COUNT
    [DllImport(Lib, EntryPoint = "ak_parse_ListMetricsResponse", CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
    private static extern int ak_parse_ListMetricsResponse__raw(IntPtr ctx, byte* buf, nuint len);
    internal static long N_ak_parse_ListMetricsResponse;
    internal static int ak_parse_ListMetricsResponse(IntPtr ctx, byte* buf, nuint len) { System.Threading.Interlocked.Increment(ref N_ak_parse_ListMetricsResponse); return ak_parse_ListMetricsResponse__raw(ctx, buf, len); }
#elif NET7_0_OR_GREATER
    [LibraryImport(Lib)]
    [UnmanagedCallConv(CallConvs = new[] { typeof(CallConvCdecl) })]
    internal static partial int ak_parse_ListMetricsResponse(IntPtr ctx, byte* buf, nuint len);
#else
    [DllImport(Lib, CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
    internal static extern int ak_parse_ListMetricsResponse(IntPtr ctx, byte* buf, nuint len);
#endif
#if AK_HOST_COUNT
    [DllImport(Lib, EntryPoint = "ak_encode_DualResponse", CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
    private static extern nint ak_encode_DualResponse__raw(void* obj, IntPtr ctx, ak_evt_DualResponse* vt, ak_efix_DualResponse* fix);
    internal static long N_ak_encode_DualResponse;
    internal static nint ak_encode_DualResponse(void* obj, IntPtr ctx, ak_evt_DualResponse* vt, ak_efix_DualResponse* fix) { System.Threading.Interlocked.Increment(ref N_ak_encode_DualResponse); return ak_encode_DualResponse__raw(obj, ctx, vt, fix); }
#elif NET7_0_OR_GREATER
    [LibraryImport(Lib)]
    [UnmanagedCallConv(CallConvs = new[] { typeof(CallConvCdecl) })]
    internal static partial nint ak_encode_DualResponse(void* obj, IntPtr ctx, ak_evt_DualResponse* vt, ak_efix_DualResponse* fix);
#else
    [DllImport(Lib, CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
    internal static extern nint ak_encode_DualResponse(void* obj, IntPtr ctx, ak_evt_DualResponse* vt, ak_efix_DualResponse* fix);
#endif
#if AK_HOST_COUNT
    [DllImport(Lib, EntryPoint = "ak_decode_DualResponse", CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
    private static extern int ak_decode_DualResponse__raw(IntPtr ctx, void* obj, byte* buf, nuint len, ak_dvt_DualResponse* vt);
    internal static long N_ak_decode_DualResponse;
    internal static int ak_decode_DualResponse(IntPtr ctx, void* obj, byte* buf, nuint len, ak_dvt_DualResponse* vt) { System.Threading.Interlocked.Increment(ref N_ak_decode_DualResponse); return ak_decode_DualResponse__raw(ctx, obj, buf, len, vt); }
#elif NET7_0_OR_GREATER
    [LibraryImport(Lib)]
    [UnmanagedCallConv(CallConvs = new[] { typeof(CallConvCdecl) })]
    internal static partial int ak_decode_DualResponse(IntPtr ctx, void* obj, byte* buf, nuint len, ak_dvt_DualResponse* vt);
#else
    [DllImport(Lib, CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
    internal static extern int ak_decode_DualResponse(IntPtr ctx, void* obj, byte* buf, nuint len, ak_dvt_DualResponse* vt);
#endif
#if AK_HOST_COUNT
    [DllImport(Lib, EntryPoint = "ak_parse_DualResponse", CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
    private static extern int ak_parse_DualResponse__raw(IntPtr ctx, byte* buf, nuint len);
    internal static long N_ak_parse_DualResponse;
    internal static int ak_parse_DualResponse(IntPtr ctx, byte* buf, nuint len) { System.Threading.Interlocked.Increment(ref N_ak_parse_DualResponse); return ak_parse_DualResponse__raw(ctx, buf, len); }
#elif NET7_0_OR_GREATER
    [LibraryImport(Lib)]
    [UnmanagedCallConv(CallConvs = new[] { typeof(CallConvCdecl) })]
    internal static partial int ak_parse_DualResponse(IntPtr ctx, byte* buf, nuint len);
#else
    [DllImport(Lib, CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
    internal static extern int ak_parse_DualResponse(IntPtr ctx, byte* buf, nuint len);
#endif
#if AK_HOST_COUNT
    [DllImport(Lib, EntryPoint = "ak_elemu_MetricsBatch", CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
    private static extern int ak_elemu_MetricsBatch__raw(IntPtr ctx, ak_efix_MetricsBatch* elems, int n, long tok0);
    internal static long N_ak_elemu_MetricsBatch;
    internal static int ak_elemu_MetricsBatch(IntPtr ctx, ak_efix_MetricsBatch* elems, int n, long tok0) { System.Threading.Interlocked.Increment(ref N_ak_elemu_MetricsBatch); return ak_elemu_MetricsBatch__raw(ctx, elems, n, tok0); }
#elif NET7_0_OR_GREATER
    [LibraryImport(Lib)]
    [UnmanagedCallConv(CallConvs = new[] { typeof(CallConvCdecl) })]
    internal static partial int ak_elemu_MetricsBatch(IntPtr ctx, ak_efix_MetricsBatch* elems, int n, long tok0);
#else
    [DllImport(Lib, CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
    internal static extern int ak_elemu_MetricsBatch(IntPtr ctx, ak_efix_MetricsBatch* elems, int n, long tok0);
#endif
#if AK_HOST_COUNT
    [DllImport(Lib, EntryPoint = "ak_elem_Pair", CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
    private static extern int ak_elem_Pair__raw(IntPtr ctx, ak_efix_Pair* elems, int n);
    internal static long N_ak_elem_Pair;
    internal static int ak_elem_Pair(IntPtr ctx, ak_efix_Pair* elems, int n) { System.Threading.Interlocked.Increment(ref N_ak_elem_Pair); return ak_elem_Pair__raw(ctx, elems, n); }
#elif NET7_0_OR_GREATER
    [LibraryImport(Lib)]
    [UnmanagedCallConv(CallConvs = new[] { typeof(CallConvCdecl) })]
    internal static partial int ak_elem_Pair(IntPtr ctx, ak_efix_Pair* elems, int n);
#else
    [DllImport(Lib, CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
    internal static extern int ak_elem_Pair(IntPtr ctx, ak_efix_Pair* elems, int n);
#endif
#if AK_HOST_COUNT
    [DllImport(Lib, EntryPoint = "ak_elem_Probe", CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
    private static extern int ak_elem_Probe__raw(IntPtr ctx, ak_efix_Probe* elems, int n);
    internal static long N_ak_elem_Probe;
    internal static int ak_elem_Probe(IntPtr ctx, ak_efix_Probe* elems, int n) { System.Threading.Interlocked.Increment(ref N_ak_elem_Probe); return ak_elem_Probe__raw(ctx, elems, n); }
#elif NET7_0_OR_GREATER
    [LibraryImport(Lib)]
    [UnmanagedCallConv(CallConvs = new[] { typeof(CallConvCdecl) })]
    internal static partial int ak_elem_Probe(IntPtr ctx, ak_efix_Probe* elems, int n);
#else
    [DllImport(Lib, CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
    internal static extern int ak_elem_Probe(IntPtr ctx, ak_efix_Probe* elems, int n);
#endif
#if AK_HOST_COUNT
    [DllImport(Lib, EntryPoint = "ak_elem_ResultRaw", CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
    private static extern int ak_elem_ResultRaw__raw(IntPtr ctx, ak_efix_ResultRaw* elems, int n);
    internal static long N_ak_elem_ResultRaw;
    internal static int ak_elem_ResultRaw(IntPtr ctx, ak_efix_ResultRaw* elems, int n) { System.Threading.Interlocked.Increment(ref N_ak_elem_ResultRaw); return ak_elem_ResultRaw__raw(ctx, elems, n); }
#elif NET7_0_OR_GREATER
    [LibraryImport(Lib)]
    [UnmanagedCallConv(CallConvs = new[] { typeof(CallConvCdecl) })]
    internal static partial int ak_elem_ResultRaw(IntPtr ctx, ak_efix_ResultRaw* elems, int n);
#else
    [DllImport(Lib, CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
    internal static extern int ak_elem_ResultRaw(IntPtr ctx, ak_efix_ResultRaw* elems, int n);
#endif
#if AK_HOST_COUNT
    [DllImport(Lib, EntryPoint = "ak_elemu_TaskDetailed", CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
    private static extern int ak_elemu_TaskDetailed__raw(IntPtr ctx, ak_efix_TaskDetailed* elems, int n, long tok0);
    internal static long N_ak_elemu_TaskDetailed;
